tests/compile_failures/no_brackets.stderr
error: proc macro panicked
 --> $DIR/no_brackets.rs:4:5
  |
4 |     read_file!(tests/testfiles/non-existing-file.txt);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: [macro_io::read_file] Failed to parse input: Error("expected string literal")
